--- a/main.html
+++ b/main.html
@@ -9,7 +9,51 @@
 </head>
 <body>
     <!-- add table here -->
-
-        
+	<table>
+		<thead>
+			<tr>
+				<th>Name</th>
+				<th>Kills</th>
+				<th>saved</th>
+				<th>deaths</th>
+				<th>revives</th>
+				<th>win</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Hackerman</td>
+				<td>10</td>
+				<td>0</td>
+				<td>1</td>
+				<td>0</td>
+				<td>0</td>
+			</tr>
+			<tr>
+				<td>Cool Doggo</td>
+				<td>13</td>
+				<td>3</td>
+				<td>14</td>
+				<td>5</td>
+				<td>6</td>
+			</tr>
+			<tr>
+				<td>Andrews</td>
+				<td>14</td>
+				<td>5</td>
+				<td>4</td>
+				<td>0</td>
+				<td>0</td>
+			</tr>
+			<tr>
+				<td>Strawberry</td>
+				<td>30</td>
+				<td>3</td>
+				<td>45</td>
+				<td>0</td>
+				<td>0</td>
+			</tr>
+		</tbody>
+	</table>
 </body>
 </html>
